@@ -41,6 +41,7 @@ Changes for 1.3.5.2
 -Make turn blocks (block-90) work as bricks when SMBX19 and lower level file version is open
 -Added a workaround for the yellow platform (NPC-60) at "The Invasion 1" episode where it won't move at level42
 -Added Billy Gun (NPC-22) behavior compatibility with SMBX 1.2 and 1.1.x and older file formats
+-Added wireless game controllers battery status displaying when enabled at the settings
 
 Changes for 1.3.5.1
 -Episodes and battle levels lists now loading in the separated thread with a progress showing
